# waymonad

./: .build.yml  .gitignore  .gitmodules  .license_template  ChangeLog.md  README.md  cabal.project  license_helper.sh  manifest  waymonad.cabal
cpphs/: CHANGELOG  COPYRIGHT  CpphsTest.hs  LICENCE-GPL  LICENCE-LGPL  LICENCE-commercial  Makefile  Makefile.nhc98  README  cpphs.cabal  cpphs.compat  cpphs.hs  cpphs.hugs  cpphs.spec
cpphs/Language/Preprocessor/: Cpphs.hs  Unlit.hs
cpphs/Text/ParserCombinators/: HuttonMeijer.hs
cpphs/_darcs/: format  hashed_inventory  index  tentative_pristine
cpphs/_darcs/inventories/: 0000000327-06a54526f01823fe3d8087cafda39cf5d23c5b31cc07a62a7e8f48e95e5ca936  0000005344-77dd2aeae1988fb08270a8ad0d05f43d12d04d1b21ce9bed28c1c5788887e957  0000016452-cfa69360a5107de13542f9a02fedbe0a0fa2b5548f027b3ea9e89638190b9683  0000054720-80a18ab92f8f65d7c322d913adf65ab660cf1989d5a8689d61ea671fd9ab6e1f
cpphs/_darcs/patches/: 0000000129-a3dca2d9503af82ef488dbaa3bfc3a3c5bc1bc16deda8b01386701600daa8800  0000000130-c08bac1d08af4e1519c19952c8ca07c6ade6da9946355f7cd82b0b0128740bed  0000000146-1c31cd23f6fc106b29f4e2ebca8f6e6878e5d8cab99f241a8859f4b4999d7c7b  0000000146-9d3b470357dff41ae2c834fd194b40c864c6c23eadcc599f23859244d9fcad05  0000000146-c27a1b0f9ba847ed9db35bd1df0437f7ddd6be7451f2704f29a9a380664b7614  0000000160-5f3a1a20326eb387bb27e065900da97107e93fe8a314fc73d159bb4b11ca1915  0000000161-bd56dda93495b9e0aff60ab9d1c3a69792484b8074d7d7cc6d9130250d63329e  0000000170-2470cb63236ec3c5c0594e625670abcd3329dbb42305910207575ad108594e4b  0000000172-de61204c91d670e6b50f970db84e0a57321841131cd8f173e2fda23537dd0a55  0000000174-c3279b05606e6eb213b8ac4123c064b750f09a46987f6205a796d89bc3d3b015  0000000174-fdb3e26aaec2c64f7bb9093ade5bcbbc9cc48777ecfeb6e571ad0897fa1978d3  0000000178-1173cea6691665fe6c662c788f51ed90e038bbee381bf52ef5cbc23db77de1a7  0000000183-711ce82a0f0d0cf684b9d733b770e335909cb0334ca96176ce4eb10f8dfd4504  (+345 more)
cpphs/_darcs/prefs/: binaries  (+3 more)
cpphs/docs/: cpphs.1  design  index.html
cpphs/tests/: Defined.hs  HsOpenGLExt.h  Test.hsc  ballard  booleanchain  chains  cheplyaka  comments  cpp  definedness.txt  elif  endcode-a  endcode-b  expect1  expect10  expect11  expect12  expect13  expect13a  expect14  expect15  expect15a  expect16  expect17  expect19  expect2  expect20  expect21  expect22  expect23  expect24  expect25  expect26  expect27  expect28  expect29  expect3  expect30  expect31  expect32  (+85 more)
(+199 files in other folders)
