Name: cpphs
Version: 1.20.8
Copyright: 2004-2017, Malcolm Wallace
License: LGPL
License-File: LICENCE-LGPL
Cabal-Version: >= 1.6
Author: Malcolm Wallace <Malcolm.Wallace@me.com>
Maintainer: Malcolm Wallace <Malcolm.Wallace@me.com>
Homepage: http://projects.haskell.org/cpphs/
bug-reports: https://github.com/malcolmwallace/cpphs/issues
Synopsis: A liberalised re-implementation of cpp, the C pre-processor.
Description:
    Cpphs is a re-implementation of the C pre-processor that is both
    more compatible with Haskell, and itself written in Haskell so
    that it can be distributed with compilers.
    .
    This version of the C pre-processor is pretty-much
    feature-complete and compatible with traditional (K&R)
    pre-processors.  Additional features include: a plain-text mode;
    an option to unlit literate code files; and an option to turn
    off macro-expansion.
Category: Development
Build-type: Simple
Extra-Source-Files: README, LICENCE-GPL, LICENCE-commercial, CHANGELOG, docs/cpphs.1, docs/index.html

Library
    Build-Depends: base>3&&<6, old-locale, old-time, directory, polyparse>=1.9
    Exposed-Modules:
        Language.Preprocessor.Cpphs
        Language.Preprocessor.Unlit
    Other-Modules:
        Language.Preprocessor.Cpphs.CppIfdef
        Language.Preprocessor.Cpphs.HashDefine
        Language.Preprocessor.Cpphs.MacroPass
        Language.Preprocessor.Cpphs.Options
        Language.Preprocessor.Cpphs.Position
        Language.Preprocessor.Cpphs.ReadFirst
        Language.Preprocessor.Cpphs.RunCpphs
        Language.Preprocessor.Cpphs.SymTab
        Language.Preprocessor.Cpphs.Tokenise

Executable cpphs
    Build-Depends: base>3&&<6, old-locale, old-time, directory, polyparse>=1.9
    Main-Is: cpphs.hs
    Other-Modules:
        Language.Preprocessor.Cpphs
        Language.Preprocessor.Unlit
        Language.Preprocessor.Cpphs.CppIfdef
        Language.Preprocessor.Cpphs.HashDefine
        Language.Preprocessor.Cpphs.MacroPass
        Language.Preprocessor.Cpphs.Options
        Language.Preprocessor.Cpphs.Position
        Language.Preprocessor.Cpphs.ReadFirst
        Language.Preprocessor.Cpphs.RunCpphs
        Language.Preprocessor.Cpphs.SymTab
        Language.Preprocessor.Cpphs.Tokenise

Source-Repository head
    Type:     darcs
    Location: http://code.haskell.org/cpphs
